Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -1,17 +1,7 @@
 .search-container {
   background-color: $gray-lighter;
   height: 100%;
-  overflow-x: hidden;
   position: relative;
-
-  @media (min-width: $screen-md-min) {
-    overflow: auto;
-  }
-
-  @media (max-width: $screen-xs-max) {
-    overflow-y: scroll; /* has to be scroll, not auto */
-    -webkit-overflow-scrolling: touch;
-  }
 }
 
 .search-scroll-up {
@@ -45,6 +35,11 @@
     position: absolute;
     right: 361px;
     top: 0;
+  }
+
+  @media (max-width: $screen-xs-max) {
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
   }
 
   .search-results-container {
